# ofetch

./: .envrc  .ocamlformat  default.nix  dune-project  flake.nix  ofetch.opam  shell.nix
lib/: byte_sizes.ml  dune  io.ml  std.ml  time.ml
lib/ansi/: ansi.ml  cursor.ml  mouse.ml  style.ml
lib/data/: flags.ml
lib/data/logos/: arch.ml  linux_logo.ml  logos.ml  nixos.ml
lib/linux/: sysinfo.ml  sysinfo.mli  uname.ml  uname.mli
lib/linux/etc/: lsb_release.ml  os_release.ml
lib/linux/proc/: meminfo.ml
lib/tui/: element.ml  style.ml  tui.ml
test/: dune
